[tool.poetry]
name = "hls"
description = ""
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
ipython = "^8.28.0"
numpy = "^1.25.2"
scipy = "^1.13.1"
scikit-learn = "^1.5.0"
scikit-sparse = "^0.4.13"
pgmpy = "^0.1.25"
cython = "^3.0.10"
tqdm = "^4.66.4"
wheel = "^0.43.0"
setuptools = "^75.2.0"
matplotlib = "^3.9.2"

[tool.poetry.group.experiments.dependencies]
# Experiments
py4j = "=0.10.9.7"
scienceplots = "^2.1.1"
psutil = "^6.0.0"
pyyaml = "^6.0.2"
seaborn = "^0.13.2"
ucimlrepo = "^0.0.7"
typer = "^0.12.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
